# bami-content-fabric

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.pi/: plan.md  temp_session_slug.txt
clients/: README.md
docs/: context.md
schemas/: content-schema.json  graphical-feature-vocabulary.yaml  intermediate-slide-schema.json  pattern-assets.schema.json  pattern-registry.schema.json  pattern-registry.yaml  pattern-selection-manifest.yaml  runtime-claim-status.schema.json  svg-variant-index.schema.json
scripts/: build_pattern_assets.py  build_svg_variant_index.py  classify_svgs_to_library.py  dump_tokens.py  lint.sh  media_library.py  package_audit.py  regenerate_qa_artifacts.py  release_gate.py
shared/: __init__.py
templates/: design_tokens.yaml  template.pptx
tests/: __init__.py  conftest.py  test_bim_rendering.py  test_block_arrow_pattern.py  test_build_e2e.py  test_build_negative.py  test_chrome.py  test_chrome_partial.py  test_ci_runtime_remediation_workflow.py  test_circle_steps_pattern.py  test_cli_exit_codes.py  test_clone.py  test_component_registry.py  test_content_normalization.py  test_contract_validation.py  test_customer_isolation.py  test_folded_arrow_pattern.py  test_full_generation_matrix.py  test_funnel_diagram_pattern.py  test_gantt.py  test_graphical_complexity.py  test_graphical_validation.py  test_injector_params.py  test_intermediate_schema.py  test_layout_dispatch.py  test_manifest_sync.py  test_media.py  test_media_library.py  test_mermaid_render.py  test_migrations.py  test_native_renderer_corrective.py  (+30 more)
(+312 files in other folders)
